examples/passing/semantics/lock_as_sync.gm
x = 0;
lock l1;
t = spawn {
  assert (x == 0);
  lock l1;
  unlock l1;
  assert (x == 2);
};
x = 2;
unlock l1;