examples/failing/semantics/join_blocked_thread.gm
$t2 = spawn { join 0; };
join $t2;